убрал пробелы в ссылках

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
                     <img src="img/icons/logo.png" alt="">
                 </a>
                 <div class="header__burger">
-                    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 122.88 95.95" xml:space="preserve">
+                    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 122.88 95.95" xml:space="preserve">
                         <g>
                             <path class="st0" d="M8.94,0h105c4.92,0,8.94,4.02,8.94,8.94l0,0c0,4.92-4.02,8.94-8.94,8.94h-105C4.02,17.88,0,13.86,0,8.94l0,0 C0,4.02,4.02,0,8.94,0L8.94,0z M8.94,78.07h105c4.92,0,8.94,4.02,8.94,8.94l0,0c0,4.92-4.02,8.94-8.94,8.94h-105 C4.02,95.95,0,91.93,0,87.01l0,0C0,82.09,4.02,78.07,8.94,78.07L8.94,78.07z M8.94,39.03h105c4.92,0,8.94,4.02,8.94,8.94l0,0 c0,4.92-4.02,8.94-8.94,8.94h-105C4.02,56.91,0,52.89,0,47.97l0,0C0,43.06,4.02,39.03,8.94,39.03L8.94,39.03z" />
                         </g>
                     </svg>
-                    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 492 492" xml:space="preserve">
+                    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 492 492" xml:space="preserve">
                         <g>
                             <g>
                                 <path d="M300.188,246L484.14,62.04c5.06-5.064,7.852-11.82,7.86-19.024c0-7.208-2.792-13.972-7.86-19.028L468.02,7.872
@@ -80,7 +80,7 @@
                         </a>
                     </div>
                     <span class="main-screen__scroll-down">
-                        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 491.996 491.996" xml:space="preserve">
+                        <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 491.996 491.996" xml:space="preserve">
                             <path d="M484.132,124.986l-16.116-16.228c-5.072-5.068-11.82-7.86-19.032-7.86c-7.208,0-13.964,2.792-19.036,7.86l-183.84,183.848 L62.056,108.554c-5.064-5.068-11.82-7.856-19.028-7.856s-13.968,2.788-19.036,7.856l-16.12,16.128 c-10.496,10.488-10.496,27.572,0,38.06l219.136,219.924c5.064,5.064,11.812,8.632,19.084,8.632h0.084c7.212,0,13.96-3.572,19.024-8.632l218.932-219.328c5.072-5.064,7.856-12.016,7.864-19.224 C491.996,136.902,489.204,130.046,484.132,124.986z" />
                         </svg>
                     </span>
@@ -93,7 +93,7 @@
                         <div class="rest__row">
                             <div class="rest__column">
                                 <div class="rest__item item">
-                                    <div class="item__image _anim-items _anim-no-hide"><img src="img/в горах/1.jpg" alt=""></div>
+                                    <div class="item__image _anim-items _anim-no-hide"><img src="img/в%20горах/1.jpg" alt=""></div>
                                     <div class="item__body">
                                         <h3 class="item__title title_s _anim-items _anim-no-hide">Отдых в горах</h3>
                                         <div class="item__text _anim-items _anim-no-hide">Вас ждут: озера ледникового периода, пешие прогулки в горы, изящные пещеры, струящиеся горные реки, термальные источники с уникальными целебными свойствами , потрясающие виды со склонов гор и новые впечатления каждый день.</div>
@@ -102,7 +102,7 @@
                             </div>
                             <div class="rest__column">
                                 <div class="rest__item item">
-                                    <div class="item__image _anim-items _anim-no-hide"><img src="img/у моря/1.jpg" alt=""></div>
+                                    <div class="item__image _anim-items _anim-no-hide"><img src="img/у%20моря/1.jpg" alt=""></div>
                                     <div class="item__body">
                                         <h3 class="item__title title_s _anim-items _anim-no-hide">Отдых у моря</h3>
                                         <div class="item__text _anim-items _anim-no-hide">
@@ -112,7 +112,7 @@
                             </div>
                             <div class="rest__column">
                                 <div class="rest__item item">
-                                    <div class="item__image _anim-items _anim-no-hide"><img src="img/у озера/1.jpg" alt=""></div>
+                                    <div class="item__image _anim-items _anim-no-hide"><img src="img/у%20озера/1.jpg" alt=""></div>
                                     <div class="item__body">
                                         <h3 class="item__title title_s _anim-items _anim-no-hide">Отдых у озера</h3>
                                         <div class="item__text _anim-items _anim-no-hide">Это живописное место на берегу чистого озера, которое подарит вам по-настоящему незабываемый отдых на лоне первозданной, дикой природы. Здесь вас встретят деревянные домики на берегу озера, увлекательная рыбалка, расслабляющая русская баня на дровах и отличные условия отдыха для взрослых и детей!
@@ -122,7 +122,7 @@
                             </div>
                             <div class="rest__column">
                                 <div class="rest__item item">
-                                    <div class="item__image _anim-items _anim-no-hide"><img src="img/в лесу/1.jpg" alt=""></div>
+                                    <div class="item__image _anim-items _anim-no-hide"><img src="img/в%20лесу/1.jpg" alt=""></div>
                                     <div class="item__body">
                                         <h3 class="item__title title_s _anim-items _anim-no-hide">Отдых в лесу</h3>
                                         <div class="item__text _anim-items _anim-no-hide">Вы сможете в полной мере отдохнуть душой и насладиться величием хвойного леса, увидеть красоту заливного луга и ощутить чистоту воздуха. Прогуливаясь по лесному массиву, Вы попадете в сказочную красоту дикого берега лесной реки и сможете искупаться в её водах вдали от людской суеты.</div>
@@ -176,19 +176,19 @@
                                         <div class="nested-sliders__swiper swiper-container">
                                             <div class="swiper-wrapper">
                                                 <div class="swiper-slide">
-                                                    <div class="nested-sliders__image"><img src="img/в горах/2.jpg" alt=""></div>
+                                                    <div class="nested-sliders__image"><img src="img/в%20горах/2.jpg" alt=""></div>
                                                 </div>
                                                 <div class="swiper-slide">
-                                                    <div class="nested-sliders__image"><img src="img/в горах/3.jpg" alt=""></div>
+                                                    <div class="nested-sliders__image"><img src="img/в%20горах/3.jpg" alt=""></div>
                                                 </div>
                                                 <div class="swiper-slide">
-                                                    <div class="nested-sliders__image"><img src="img/в горах/4.jpg" alt=""></div>
+                                                    <div class="nested-sliders__image"><img src="img/в%20горах/4.jpg" alt=""></div>
                                                 </div>
                                                 <div class="swiper-slide">
-                                                    <div class="nested-sliders__image"><img src="img/в горах/5.jpg" alt=""></div>
+                                                    <div class="nested-sliders__image"><img src="img/в%20горах/5.jpg" alt=""></div>
                                                 </div>
                                                 <div class="swiper-slide">
-                                                    <div class="nested-sliders__image"><img src="img/в горах/6.jpg" alt=""></div>
+                                                    <div class="nested-sliders__image"><img src="img/в%20горах/6.jpg" alt=""></div>
                                                 </div>
                                             </div>
                                             <div class="swiper-pagination"></div>
@@ -203,19 +203,19 @@
                                         <div class="nested-sliders__swiper swiper-container">
                                             <div class="swiper-wrapper">
                                                 <div class="swiper-slide">
-                                                    <div class="nested-sliders__image"><img src="img/у озера/2.jpg" alt=""></div>
+                                                    <div class="nested-sliders__image"><img src="img/у%20озера/2.jpg" alt=""></div>
                                                 </div>
                                                 <div class="swiper-slide">
-                                                    <div class="nested-sliders__image"><img src="img/у озера/3.jpg" alt=""></div>
+                                                    <div class="nested-sliders__image"><img src="img/у%20озера/3.jpg" alt=""></div>
                                                 </div>
                                                 <div class="swiper-slide">
-                                                    <div class="nested-sliders__image"><img src="img/у озера/4.jpg" alt=""></div>
+                                                    <div class="nested-sliders__image"><img src="img/у%20озера/4.jpg" alt=""></div>
                                                 </div>
                                                 <div class="swiper-slide">
-                                                    <div class="nested-sliders__image"><img src="img/у озера/5.jpg" alt=""></div>
+                                                    <div class="nested-sliders__image"><img src="img/у%20озера/5.jpg" alt=""></div>
                                                 </div>
                                                 <div class="swiper-slide">
-                                                    <div class="nested-sliders__image"><img src="img/у озера/6.jpg" alt=""></div>
+                                                    <div class="nested-sliders__image"><img src="img/у%20озера/6.jpg" alt=""></div>
                                                 </div>
                                             </div>
                                             <div class="swiper-pagination"></div>
@@ -230,19 +230,19 @@
                                         <div class="nested-sliders__swiper swiper-container">
                                             <div class="swiper-wrapper">
                                                 <div class="swiper-slide">
-                                                    <div class="nested-sliders__image"><img src="img/в лесу/2.jpg" alt=""></div>
+                                                    <div class="nested-sliders__image"><img src="img/в%20лесу/2.jpg" alt=""></div>
                                                 </div>
                                                 <div class="swiper-slide">
-                                                    <div class="nested-sliders__image"><img src="img/в лесу/3.jpg" alt=""></div>
+                                                    <div class="nested-sliders__image"><img src="img/в%20лесу/3.jpg" alt=""></div>
                                                 </div>
                                                 <div class="swiper-slide">
-                                                    <div class="nested-sliders__image"><img src="img/в лесу/4.jpg" alt=""></div>
+                                                    <div class="nested-sliders__image"><img src="img/в%20лесу/4.jpg" alt=""></div>
                                                 </div>
                                                 <div class="swiper-slide">
-                                                    <div class="nested-sliders__image"><img src="img/в лесу/5.jpg" alt=""></div>
+                                                    <div class="nested-sliders__image"><img src="img/в%20лесу/5.jpg" alt=""></div>
                                                 </div>
                                                 <div class="swiper-slide">
-                                                    <div class="nested-sliders__image"><img src="img/в лесу/6.jpg" alt=""></div>
+                                                    <div class="nested-sliders__image"><img src="img/в%20лесу/6.jpg" alt=""></div>
                                                 </div>
                                             </div>
                                             <div class="swiper-pagination"></div>
@@ -257,19 +257,19 @@
                                         <div class="nested-sliders__swiper swiper-container">
                                             <div class="swiper-wrapper">
                                                 <div class="swiper-slide">
-                                                    <div class="nested-sliders__image"><img src="img/у моря/2.jpg" alt=""></div>
+                                                    <div class="nested-sliders__image"><img src="img/у%20моря/2.jpg" alt=""></div>
                                                 </div>
                                                 <div class="swiper-slide">
-                                                    <div class="nested-sliders__image"><img src="img/у моря/3.jpg" alt=""></div>
+                                                    <div class="nested-sliders__image"><img src="img/у%20моря/3.jpg" alt=""></div>
                                                 </div>
                                                 <div class="swiper-slide">
-                                                    <div class="nested-sliders__image"><img src="img/у моря/4.jpg" alt=""></div>
+                                                    <div class="nested-sliders__image"><img src="img/у%20моря/4.jpg" alt=""></div>
                                                 </div>
                                                 <div class="swiper-slide">
-                                                    <div class="nested-sliders__image"><img src="img/у моря/5.jpg" alt=""></div>
+                                                    <div class="nested-sliders__image"><img src="img/у%20моря/5.jpg" alt=""></div>
                                                 </div>
                                                 <div class="swiper-slide">
-                                                    <div class="nested-sliders__image"><img src="img/у моря/6.jpg" alt=""></div>
+                                                    <div class="nested-sliders__image"><img src="img/у%20моря/6.jpg" alt=""></div>
                                                 </div>
                                             </div>
                                             <div class="swiper-pagination"></div>
@@ -292,7 +292,7 @@
                                 <div class="price__item item _anim-items _anim-no-hide _anim-items _anim-no-hide">
                                     <h3 class="item__title title_s">Дом в горах</h3>
                                     <div class="item__image">
-                                        <img src="img/в горах/2.jpg" alt="">
+                                        <img src="img/в%20горах/2.jpg" alt="">
                                     </div>
                                     <div class="item__body">
                                         <h4 class="item__title_xs title_xs">Цены от <span class="item__cost">$900</span></h4>
@@ -317,7 +317,7 @@
                                 <div class="price__item item _anim-items _anim-no-hide">
                                     <h3 class="item__title title_s">Дом у озера</h3>
                                     <div class="item__image">
-                                        <img src="img/у озера/2.jpg" alt="">
+                                        <img src="img/у%20озера/2.jpg" alt="">
                                     </div>
                                     <div class="item__body">
                                         <h4 class="item__title_xs title_xs">Цены от <span class="item__cost">$500</span></h4>
@@ -339,7 +339,7 @@
                                 <div class="price__item item _anim-items _anim-no-hide">
                                     <h3 class="item__title title_s">Дом в лесу</h3>
                                     <div class="item__image">
-                                        <img src="img/в лесу/2.jpg" alt="">
+                                        <img src="img/в%20лесу/2.jpg" alt="">
                                     </div>
                                     <div class="item__body">
                                         <h4 class="item__title_xs title_xs">Цены от <span class="item__cost">$400</span></h4>
@@ -361,7 +361,7 @@
                                 <div class="price__item item _anim-items _anim-no-hide">
                                     <h3 class="item__title title_s">Дом у моря</h3>
                                     <div class="item__image">
-                                        <img src="img/у моря/2.jpg" alt="">
+                                        <img src="img/у%20моря/2.jpg" alt="">
                                     </div>
                                     <div class="item__body">
                                         <h4 class="item__title_xs title_xs">Цены от <span class="item__cost">$600</span></h4>
@@ -528,7 +528,7 @@
                                     <div class="send-form__form form">
                                         <form action="#" method="POST" name="form">
                                             <div class="form__item form__name">
-                                                <label for="name-eef9">
+                                                <label>
                                                     <input type="text" placeholder="Введите своё имя" name="name" required="">
                                                 </label>
                                             </div>
