add lazy loading and autoplay swiper

--- a/index.html
+++ b/index.html
@@ -176,19 +176,29 @@
                                         <div class="nested-sliders__swiper swiper-container">
                                             <div class="swiper-wrapper">
                                                 <div class="swiper-slide">
-                                                    <div class="nested-sliders__image"><img src="img/в%20горах/2.jpg" alt=""></div>
+                                                    <div class="nested-sliders__image"><img data-src="img/в%20горах/2.jpg" src="img/1х1.png" class="swiper-lazy" alt="Картинка">
+<div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
+                                                    </div>
                                                 </div>
                                                 <div class="swiper-slide">
-                                                    <div class="nested-sliders__image"><img src="img/в%20горах/3.jpg" alt=""></div>
+                                                    <div class="nested-sliders__image"><img data-src="img/в%20горах/3.jpg" src="img/1х1.png" class="swiper-lazy" alt="Картинка">
+<div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
+                                                    </div>
                                                 </div>
                                                 <div class="swiper-slide">
-                                                    <div class="nested-sliders__image"><img src="img/в%20горах/4.jpg" alt=""></div>
+                                                    <div class="nested-sliders__image"><img data-src="img/в%20горах/4.jpg" src="img/1х1.png" class="swiper-lazy" alt="Картинка">
+<div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
+                                                    </div>
                                                 </div>
                                                 <div class="swiper-slide">
-                                                    <div class="nested-sliders__image"><img src="img/в%20горах/5.jpg" alt=""></div>
+                                                    <div class="nested-sliders__image"><img data-src="img/в%20горах/5.jpg" src="img/1х1.png" class="swiper-lazy" alt="Картинка">
+<div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
+                                                    </div>
                                                 </div>
                                                 <div class="swiper-slide">
-                                                    <div class="nested-sliders__image"><img src="img/в%20горах/6.jpg" alt=""></div>
+                                                    <div class="nested-sliders__image"><img data-src="img/в%20горах/6.jpg" src="img/1х1.png" class="swiper-lazy" alt="Картинка">
+<div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
+                                                    </div>
                                                 </div>
                                             </div>
                                             <div class="swiper-pagination"></div>
@@ -203,19 +213,29 @@
                                         <div class="nested-sliders__swiper swiper-container">
                                             <div class="swiper-wrapper">
                                                 <div class="swiper-slide">
-                                                    <div class="nested-sliders__image"><img src="img/у%20озера/2.jpg" alt=""></div>
+                                                    <div class="nested-sliders__image"><img data-src="img/у%20озера/2.jpg" src="img/1х1.png" class="swiper-lazy" alt="Картинка">
+<div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
+                                                    </div>
                                                 </div>
                                                 <div class="swiper-slide">
-                                                    <div class="nested-sliders__image"><img src="img/у%20озера/3.jpg" alt=""></div>
+                                                    <div class="nested-sliders__image"><img data-src="img/у%20озера/3.jpg" src="img/1х1.png" class="swiper-lazy" alt="Картинка">
+<div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
+                                                    </div>
                                                 </div>
                                                 <div class="swiper-slide">
-                                                    <div class="nested-sliders__image"><img src="img/у%20озера/4.jpg" alt=""></div>
+                                                    <div class="nested-sliders__image"><img data-src="img/у%20озера/4.jpg" src="img/1х1.png" class="swiper-lazy" alt="Картинка">
+<div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
+                                                    </div>
                                                 </div>
                                                 <div class="swiper-slide">
-                                                    <div class="nested-sliders__image"><img src="img/у%20озера/5.jpg" alt=""></div>
+                                                    <div class="nested-sliders__image"><img data-src="img/у%20озера/5.jpg" src="img/1х1.png" class="swiper-lazy" alt="Картинка">
+<div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
+                                                    </div>
                                                 </div>
                                                 <div class="swiper-slide">
-                                                    <div class="nested-sliders__image"><img src="img/у%20озера/6.jpg" alt=""></div>
+                                                    <div class="nested-sliders__image"><img data-src="img/у%20озера/6.jpg" src="img/1х1.png" class="swiper-lazy" alt="Картинка">
+<div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
+                                                    </div>
                                                 </div>
                                             </div>
                                             <div class="swiper-pagination"></div>
@@ -230,19 +250,29 @@
                                         <div class="nested-sliders__swiper swiper-container">
                                             <div class="swiper-wrapper">
                                                 <div class="swiper-slide">
-                                                    <div class="nested-sliders__image"><img src="img/в%20лесу/2.jpg" alt=""></div>
+                                                    <div class="nested-sliders__image"><img data-src="img/в%20лесу/2.jpg" src="img/1х1.png" class="swiper-lazy" alt="Картинка">
+<div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
+                                                    </div>
                                                 </div>
                                                 <div class="swiper-slide">
-                                                    <div class="nested-sliders__image"><img src="img/в%20лесу/3.jpg" alt=""></div>
+                                                    <div class="nested-sliders__image"><img data-src="img/в%20лесу/3.jpg" src="img/1х1.png" class="swiper-lazy" alt="Картинка">
+<div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
+                                                    </div>
                                                 </div>
                                                 <div class="swiper-slide">
-                                                    <div class="nested-sliders__image"><img src="img/в%20лесу/4.jpg" alt=""></div>
+                                                    <div class="nested-sliders__image"><img data-src="img/в%20лесу/4.jpg" src="img/1х1.png" class="swiper-lazy" alt="Картинка">
+<div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
+                                                    </div>
                                                 </div>
                                                 <div class="swiper-slide">
-                                                    <div class="nested-sliders__image"><img src="img/в%20лесу/5.jpg" alt=""></div>
+                                                    <div class="nested-sliders__image"><img data-src="img/в%20лесу/5.jpg" src="img/1х1.png" class="swiper-lazy" alt="Картинка">
+<div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
+                                                    </div>
                                                 </div>
                                                 <div class="swiper-slide">
-                                                    <div class="nested-sliders__image"><img src="img/в%20лесу/6.jpg" alt=""></div>
+                                                    <div class="nested-sliders__image"><img data-src="img/в%20лесу/6.jpg" src="img/1х1.png" class="swiper-lazy" alt="Картинка">
+<div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
+                                                    </div>
                                                 </div>
                                             </div>
                                             <div class="swiper-pagination"></div>
@@ -257,19 +287,29 @@
                                         <div class="nested-sliders__swiper swiper-container">
                                             <div class="swiper-wrapper">
                                                 <div class="swiper-slide">
-                                                    <div class="nested-sliders__image"><img src="img/у%20моря/2.jpg" alt=""></div>
+                                                    <div class="nested-sliders__image"><img data-src="img/у%20моря/2.jpg" src="img/1х1.png" class="swiper-lazy" alt="Картинка">
+<div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
+                                                    </div>
                                                 </div>
                                                 <div class="swiper-slide">
-                                                    <div class="nested-sliders__image"><img src="img/у%20моря/3.jpg" alt=""></div>
+                                                    <div class="nested-sliders__image"><img data-src="img/у%20моря/3.jpg" src="img/1х1.png" class="swiper-lazy" alt="Картинка">
+<div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
+                                                    </div>
                                                 </div>
                                                 <div class="swiper-slide">
-                                                    <div class="nested-sliders__image"><img src="img/у%20моря/4.jpg" alt=""></div>
+                                                    <div class="nested-sliders__image"><img data-src="img/у%20моря/4.jpg" src="img/1х1.png" class="swiper-lazy" alt="Картинка">
+<div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
+                                                    </div>
                                                 </div>
                                                 <div class="swiper-slide">
-                                                    <div class="nested-sliders__image"><img src="img/у%20моря/5.jpg" alt=""></div>
+                                                    <div class="nested-sliders__image"><img data-src="img/у%20моря/5.jpg" src="img/1х1.png" class="swiper-lazy" alt="Картинка">
+<div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
+                                                    </div>
                                                 </div>
                                                 <div class="swiper-slide">
-                                                    <div class="nested-sliders__image"><img src="img/у%20моря/6.jpg" alt=""></div>
+                                                    <div class="nested-sliders__image"><img data-src="img/у%20моря/6.jpg" src="img/1х1.png" class="swiper-lazy" alt="Картинка">
+<div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
+                                                    </div>
                                                 </div>
                                             </div>
                                             <div class="swiper-pagination"></div>
